--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         "@discordjs/rest": "^2.0.1",
         "@prisma/client": "^5.2.0",
         "discord.js": "^14.13.0",
-        "dotenv": "^16.3.1",
-        "prisma": "^5.2.0"
+        "dotenv": "^16.3.1"
     },
     "devDependencies": {
         "@tsconfig/node20": "^20.1.1",
@@ -32,6 +31,7 @@
         "husky": "^8.0.3",
         "lint-staged": "^14.0.1",
         "prettier": "^3.0.2",
+        "prisma": "^5.2.0",
         "rimraf": "^5.0.1",
         "tsc-watch": "^6.0.4",
         "typescript": "^5.1.6"
